--- a/src/main/resources/com/example/tp_ui/Jeu-View.fxml
+++ b/src/main/resources/com/example/tp_ui/Jeu-View.fxml
@@ -52,12 +52,21 @@
                 <Tab text="Objet">
                     <content>
                         <AnchorPane>
-                            <Label fx:id="Test2" layoutX="164.0" layoutY="96.0" prefHeight="17.0" prefWidth="165.0"/>
-                            <Label fx:id="nomObjet1" layoutX="164.0" layoutY="96.0" prefHeight="17.0"
-                            <Label fx:id="DescriptionObjet1" layoutX="164.0" layoutY="96.0" prefHeight="17.0"
-                                   prefWidth="165.0"/>
-                            <Button layoutX="50" layoutY="113.0" mnemonicParsing="false" id="butAchat" onAction="#achat"
+                            <Label fx:id="Pioche" layoutX="20" layoutY="10" prefHeight="17.0"/>
+                            <Label fx:id="descriptionPioche" layoutX="20" layoutY="30" prefHeight="17.0" prefWidth="165.0"/>
+                            <Label fx:id="prixPioche" layoutX="20" layoutY="50" prefHeight="17.0"/>
+                            <Label fx:id="niveauPioche" layoutX="20" layoutY="50" prefHeight="17.0"/>
+                            <Button layoutX="30" layoutY="50" mnemonicParsing="false" id="butAchat" onAction="#achat"
                                     text="LvlUp" userData="but"/>
+
+                            <Label fx:id="nomObjet2" layoutX="25" layoutY="10" prefHeight="17.0"/>
+                            <Label fx:id="DescriptionObjet2" layoutX="25" layoutY="30" prefHeight="17.0" prefWidth="165.0"/>
+
+                            <Label fx:id="nomObjet3" layoutX="25" layoutY="10" prefHeight="17.0"/>
+                            <Label fx:id="DescriptionObjet3" layoutX="25" layoutY="30" prefHeight="17.0" prefWidth="165.0"/>
+
+                            <Label fx:id="nomObjet4" layoutX="25" layoutY="10" prefHeight="17.0"/>
+                            <Label fx:id="DescriptionObjet4" layoutX="25" layoutY="30" prefHeight="17.0" prefWidth="165.0"/>
 
                         </AnchorPane>
 
