--- a/src/main/resources/com/example/tp_ui/Jeu-View.fxml
+++ b/src/main/resources/com/example/tp_ui/Jeu-View.fxml
@@ -41,10 +41,11 @@
                 <Tab text="Magasin">
                     <content>
                         <AnchorPane>
+                            <!-- Label pour informations générales -->
                             <Label fx:id="titreObjet" layoutX="100" layoutY="15" text="À chaque clic, on additionne l'effet de chaque objet par son niveau"/>
                             <Label fx:id="orJoueur" layoutX="20" layoutY="40" text="Or du joueur :"/>
                             <Label fx:id="orJoueurChiffre" layoutX="110" layoutY="40" text="0"/>
-
+                            <!--Information de l'objet 1-->
                             <Label layoutX="20" layoutY="70" prefHeight="17.0">Pioche</Label>
                             <Label layoutX="20" layoutY="90" prefHeight="17.0">Effet : +2/click</Label>
                             <Label layoutX="20" layoutY="110" prefHeight="17.0">Prix :</Label>
@@ -53,7 +54,7 @@
                             <Label fx:id="niveauPioche" layoutX="105" layoutY="130" prefHeight="17.0" text="0"/>
                             <Button layoutX="100" layoutY="70" mnemonicParsing="false" id="PiocheAchat" onAction="#achat"
                                     text="LvlUp" userData="Pioche"/>
-
+                            <!--Information de l'objet 2-->
                             <Label layoutX="450" layoutY="70" prefHeight="17.0">Perceuse</Label>
                             <Label layoutX="450" layoutY="90" prefHeight="17.0">Effet : +4/click</Label>
                             <Label layoutX="450" layoutY="110" prefHeight="17.0">Prix :</Label>
@@ -62,7 +63,7 @@
                             <Label fx:id="niveauPerceuse" layoutX="535" layoutY="130" prefHeight="17.0" text="0"/>
                             <Button layoutX="540" layoutY="70" mnemonicParsing="false" id="PerceuseAchat" onAction="#achat"
                                     text="LvlUp" userData="Perceuse"/>
-
+                            <!--Information de l'objet 3-->
                             <Label layoutX="20" layoutY="250" prefHeight="17.0">Nain</Label>
                             <Label layoutX="20" layoutY="270" prefHeight="17.0">Effet : +8/click</Label>
                             <Label layoutX="20" layoutY="290" prefHeight="17.0">Prix :</Label>
@@ -71,7 +72,7 @@
                             <Label fx:id="niveauNain" layoutX="105" layoutY="310" prefHeight="17.0" text="0"/>
                             <Button layoutX="100" layoutY="250" mnemonicParsing="false" id="NainAchat" onAction="#achat"
                                     text="LvlUp" userData="Nain"/>
-
+                            <!--Information de l'objet 4-->
                             <Label layoutX="450" layoutY="250" prefHeight="17.0">Foreuse</Label>
                             <Label layoutX="450" layoutY="270" prefHeight="17.0">Effet : +12/click</Label>
                             <Label layoutX="450" layoutY="290" prefHeight="17.0">Prix :</Label>
@@ -91,63 +92,63 @@
                     <content>
                         <AnchorPane>
                             <!-- Label pour informations générales -->
-                            <Label layoutX="150" text="Achat avec la bière"/>
-                            <Label fx:id="points" layoutX="200" layoutY="20" text="Bières disponibles :" />
+                            <Label layoutX="150" text="1 point de capacité par 100 ressources produites"/>
+                            <Label layoutX="200" layoutY="20" text="Points disponibles :" />
 
                             <!--Information de la capacité 1-->
-                            <Label fx:id="nomLeadership" layoutX="20" layoutY="50" prefHeight="17.0" prefWidth="165.0" text="Leadership"/>
-                            <Label fx:id="effetLeadership" layoutX="70" layoutY="70" prefHeight="17.0" prefWidth="165.0" text="0.1/click"/>
+                            <Label fx:id="nomCapacité1" layoutX="20" layoutY="50" prefHeight="17.0" prefWidth="165.0" text="Leadership"/>
+                            <Label fx:id="effetCap1" layoutX="70" layoutY="70" prefHeight="17.0" prefWidth="165.0" text="50/s"/>
                             <Label layoutX="20" layoutY="70" prefHeight="17.0" prefWidth="165.0" text = "Effet :"/>
 
-                            <Label fx:id="prixcLeadership" layoutX="70" layoutY="90" prefHeight="17.0" prefWidth="165.0" text="1"/>
+                            <Label fx:id="prixCap1" layoutX="70" layoutY="90" prefHeight="17.0" prefWidth="165.0" text="1"/>
                             <Label layoutX="20" layoutY="90" prefHeight="17.0" prefWidth="165.0" text = "Prix :"/>
 
-                            <Label fx:id="nivLeadership" layoutX="70" layoutY="110" prefHeight="17.0" prefWidth="165.0" text="0"/>
+                            <Label fx:id="nivCap1" layoutX="70" layoutY="110" prefHeight="17.0" prefWidth="165.0" text="0"/>
                             <Label layoutX="20" layoutY="110" prefHeight="17.0" prefWidth="165.0" text = "Niveau :"/>
 
-                            <Button fx:id="LeadershipAchat" layoutX="90" layoutY="110" mnemonicParsing="false" id="butAchat" onAction="#achatc"
+                            <Button layoutX="90" layoutY="110" mnemonicParsing="false" id="butAchat" onAction="#achat"
                                     text="+" userData="but"/>
 
                             <!-- Information de la capacité 2 -->
-                            <Label fx:id="nomCompetence" layoutX="20" layoutY="220" prefHeight="17.0" prefWidth="165.0" text="Compétence de minage"/>
-                            <Label fx:id="effetCompetence" layoutX="70" layoutY="240" prefHeight="17.0" prefWidth="165.0" text="0.4/click"/>
+                            <Label fx:id="nomCapacité2" layoutX="20" layoutY="220" prefHeight="17.0" prefWidth="165.0" text="Récolte"/>
+                            <Label fx:id="effetCap2" layoutX="70" layoutY="240" prefHeight="17.0" prefWidth="165.0" text="35/s"/>
                             <Label layoutX="20" layoutY="240" prefHeight="17.0" prefWidth="165.0" text = "Effet :"/>
 
-                            <Label fx:id="prixcCompetence" layoutX="70" layoutY="260" prefHeight="17.0" prefWidth="165.0" text="4"/>
+                            <Label fx:id="prixCap2" layoutX="70" layoutY="260" prefHeight="17.0" prefWidth="165.0" text="1"/>
                             <Label layoutX="20" layoutY="260" prefHeight="17.0" prefWidth="165.0" text = "Prix :"/>
 
-                            <Label fx:id="nivCompetence" layoutX="70" layoutY="280" prefHeight="17.0" prefWidth="165.0" text="0"/>
+                            <Label fx:id="nivCap2" layoutX="70" layoutY="280" prefHeight="17.0" prefWidth="165.0" text="0"/>
                             <Label layoutX="20" layoutY="280" prefHeight="17.0" prefWidth="165.0" text = "Niveau :"/>
 
-                            <Button fx:id="CompetenceAchat" layoutX="90" layoutY="280" mnemonicParsing="false" id="butAchat" onAction="#achatc"
+                            <Button layoutX="90" layoutY="280" mnemonicParsing="false" id="butAchat" onAction="#achat"
                                     text="+" userData="but"/>
 
                             <!-- Information de la capacité 3 -->
-                            <Label fx:id="nomForage" layoutX="350" layoutY="50" prefHeight="17.0" prefWidth="165.0" text="Technique de forage"/>
-                            <Label fx:id="effetForage" layoutX="400" layoutY="70" prefHeight="17.0" prefWidth="165.0" text="0.8/click"/>
+                            <Label fx:id="nomCapacité3" layoutX="350" layoutY="50" prefHeight="17.0" prefWidth="165.0" text="Technique de forage"/>
+                            <Label fx:id="effetCap3" layoutX="400" layoutY="70" prefHeight="17.0" prefWidth="165.0" text="250/s"/>
                             <Label layoutX="350" layoutY="70" prefHeight="17.0" prefWidth="165.0" text = "Effet :"/>
 
-                            <Label fx:id="prixcForage" layoutX="400" layoutY="90" prefHeight="17.0" prefWidth="165.0" text="8"/>
+                            <Label fx:id="prixCap3" layoutX="400" layoutY="90" prefHeight="17.0" prefWidth="165.0" text="1"/>
                             <Label layoutX="350" layoutY="90" prefHeight="17.0" prefWidth="165.0" text = "Prix :"/>
 
-                            <Label fx:id="nivForage" layoutX="400" layoutY="110" prefHeight="17.0" prefWidth="165.0" text="0"/>
+                            <Label fx:id="nivCap3" layoutX="400" layoutY="110" prefHeight="17.0" prefWidth="165.0" text="0"/>
                             <Label layoutX="350" layoutY="110" prefHeight="17.0" prefWidth="165.0" text = "Niveau :"/>
 
-                            <Button fx:id="ForageAchat"  layoutX="430" layoutY="110" mnemonicParsing="false" id="butAchat" onAction="#achatc"
+                            <Button layoutX="430" layoutY="110" mnemonicParsing="false" id="butAchat" onAction="#achat"
                                     text="+" userData="but"/>
 
                             <!--Information de la capacité 4-->
-                            <Label fx:id="nomRecolte" layoutX="350" layoutY="220" prefHeight="17.0" prefWidth="165.0" text="Récolte"/>
-                            <Label fx:id="effetRecolte" layoutX="400" layoutY="240" prefHeight="17.0" prefWidth="165.0" text="1/click"/>
+                            <Label fx:id="nomCapacité4" layoutX="350" layoutY="220" prefHeight="17.0" prefWidth="165.0" text="Technique de distillerie"/>
+                            <Label fx:id="effetCap4" layoutX="400" layoutY="240" prefHeight="17.0" prefWidth="165.0" text="160/s"/>
                             <Label layoutX="350" layoutY="240" prefHeight="17.0" prefWidth="165.0" text = "Effet :"/>
 
-                            <Label fx:id="prixcRecolte" layoutX="400" layoutY="260" prefHeight="17.0" prefWidth="165.0" text="10"/>
+                            <Label fx:id="prixCap4" layoutX="400" layoutY="260" prefHeight="17.0" prefWidth="165.0" text="1"/>
                             <Label layoutX="350" layoutY="260" prefHeight="17.0" prefWidth="165.0" text = "Prix :"/>
 
-                            <Label fx:id="nivRecolte" layoutX="400" layoutY="280" prefHeight="17.0" prefWidth="165.0" text="0"/>
+                            <Label fx:id="nivCap4" layoutX="400" layoutY="280" prefHeight="17.0" prefWidth="165.0" text="0"/>
                             <Label layoutX="350" layoutY="280" prefHeight="17.0" prefWidth="165.0" text = "Niveau :"/>
 
-                            <Button fx:id="RecolteAchat" layoutX="430" layoutY="280" mnemonicParsing="false" id="butAchat" onAction="#achatc"
+                            <Button layoutX="430" layoutY="280" mnemonicParsing="false" id="butAchat" onAction="#achat"
                                     text="+" userData="but"/>
                         </AnchorPane>
 
