--- a/src/main/resources/com/example/tp_ui/Jeu-View.fxml
+++ b/src/main/resources/com/example/tp_ui/Jeu-View.fxml
@@ -65,7 +65,7 @@
                             <Label fx:id="effetLeadership" layoutX="70" layoutY="70" prefHeight="17.0" prefWidth="165.0" text="50/s"/>
                             <Label layoutX="20" layoutY="70" prefHeight="17.0" prefWidth="165.0" text = "Effet :"/>
 
-                            <Label fx:id="prixLeadership" layoutX="70" layoutY="90" prefHeight="17.0" prefWidth="165.0" text="1"/>
+                            <Label fx:id="prixcLeadership" layoutX="70" layoutY="90" prefHeight="17.0" prefWidth="165.0" text="1"/>
                             <Label layoutX="20" layoutY="90" prefHeight="17.0" prefWidth="165.0" text = "Prix :"/>
 
                             <Label fx:id="nivLeadership" layoutX="70" layoutY="110" prefHeight="17.0" prefWidth="165.0" text="0"/>
@@ -79,7 +79,7 @@
                             <Label fx:id="effetCompetence" layoutX="70" layoutY="240" prefHeight="17.0" prefWidth="165.0" text="35/s"/>
                             <Label layoutX="20" layoutY="240" prefHeight="17.0" prefWidth="165.0" text = "Effet :"/>
 
-                            <Label fx:id="prixCompetence" layoutX="70" layoutY="260" prefHeight="17.0" prefWidth="165.0" text="1"/>
+                            <Label fx:id="prixcCompetence" layoutX="70" layoutY="260" prefHeight="17.0" prefWidth="165.0" text="1"/>
                             <Label layoutX="20" layoutY="260" prefHeight="17.0" prefWidth="165.0" text = "Prix :"/>
 
                             <Label fx:id="nivCompetence" layoutX="70" layoutY="280" prefHeight="17.0" prefWidth="165.0" text="0"/>
@@ -93,7 +93,7 @@
                             <Label fx:id="effetForage" layoutX="400" layoutY="70" prefHeight="17.0" prefWidth="165.0" text="250/s"/>
                             <Label layoutX="350" layoutY="70" prefHeight="17.0" prefWidth="165.0" text = "Effet :"/>
 
-                            <Label fx:id="prixForage" layoutX="400" layoutY="90" prefHeight="17.0" prefWidth="165.0" text="1"/>
+                            <Label fx:id="prixcForage" layoutX="400" layoutY="90" prefHeight="17.0" prefWidth="165.0" text="1"/>
                             <Label layoutX="350" layoutY="90" prefHeight="17.0" prefWidth="165.0" text = "Prix :"/>
 
                             <Label fx:id="nivForage" layoutX="400" layoutY="110" prefHeight="17.0" prefWidth="165.0" text="0"/>
@@ -107,7 +107,7 @@
                             <Label fx:id="effetRecolte" layoutX="400" layoutY="240" prefHeight="17.0" prefWidth="165.0" text="160/s"/>
                             <Label layoutX="350" layoutY="240" prefHeight="17.0" prefWidth="165.0" text = "Effet :"/>
 
-                            <Label fx:id="prixRecolte" layoutX="400" layoutY="260" prefHeight="17.0" prefWidth="165.0" text="1"/>
+                            <Label fx:id="prixcRecolte" layoutX="400" layoutY="260" prefHeight="17.0" prefWidth="165.0" text="1"/>
                             <Label layoutX="350" layoutY="260" prefHeight="17.0" prefWidth="165.0" text = "Prix :"/>
 
                             <Label fx:id="nivRecolte" layoutX="400" layoutY="280" prefHeight="17.0" prefWidth="165.0" text="0"/>
